--- a/products/platingcoating/electrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาแลคเกอร์ไฟฟ้า (Electrophoretic Lacquer / E‑coat) | Baume Chemical</title>
   <meta name="description" content="โซลูชันแลคเกอร์ไฟฟ้า (E‑coat) สำหรับงานอุตสาหกรรม: Acrylic และ Polyurethane เพิ่มความทนกัดกร่อน ป้องกันสนิม และความเงา โดยไม่เปลี่ยนคุณสมบัติวัสดุต้นฉบับ เหมาะกับเครื่องใช้ไฟฟ้า ชิ้นส่วนอุตสาหกรรม และยานยนต์">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="electrophoreticlacquer.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -18,7 +18,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="Electrophoretic Lacquer (E‑coat) | Baume Chemical">
   <meta property="og:description" content="Acrylic & Polyurethane E‑coat: durable, corrosion‑resistant, glossy protective finishes for industrial parts.">
-  <meta property="og:url" content="https://www.baumechemical.com/electrophoreticlacquer">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image0-174d2122a9ed67635.jpeg">
   <meta property="og:image:alt" content="Electrophoretic lacquer (E‑coat) line on metal parts">
   <meta name="twitter:card" content="summary_large_image">
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "name":"Electrophoretic Lacquer (E‑coat)",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/electrophoreticlacquer",
+    "url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/",
     "description":"Acrylic and Polyurethane electrophoretic lacquer systems for protective, glossy, corrosion‑resistant finishes."
   }
   </script>
@@ -52,8 +52,8 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products"},
-      {"@type":"ListItem","position":3,"name":"Electrophoretic Lacquer","item":"https://www.baumechemical.com/electrophoreticlacquer"}
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+      {"@type":"ListItem","position":3,"name":"Electrophoretic Lacquer","item":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/"}
     ]
   }
   </script>
@@ -177,7 +177,7 @@
             <div class="badges"><span class="badge">Acrylic</span><span class="badge">E‑coat</span></div>
             <h3 data-i18n-key="acr_title">Acrylic Electrophoretic Lacquer</h3>
             <p data-i18n-key="acr_desc">เรซินอะคริลิคให้ฟิล์มเงาสูง ทนการกัดกร่อนและสารเคมี ช่วยป้องกันสนิมและยกระดับลุคของชิ้นงาน เหมาะเครื่องใช้ไฟฟ้า ของตกแต่ง และยานยนต์</p>
-            <a class="more" href="troubleshootingelectrophoreticlacquer.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingelectrophoreticlacquer/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -190,7 +190,7 @@
             <div class="badges"><span class="badge">Polyurethane</span><span class="badge">E‑coat</span></div>
             <h3 data-i18n-key="pu_title">Polyurethane Electrophoretic Lacquer</h3>
             <p data-i18n-key="pu_desc">ให้ความทนรอยขีดข่วนและการสึกหรอสูง พร้อมการป้องกันการกัดกร่อน ยึดเกาะดี ทนสภาพแวดล้อม เหมาะงานยานยนต์ อิเล็กทรอนิกส์ และอุปกรณ์การแพทย์</p>
-            <a class="more" href="troubleshootingelectrophoreticlacquerpolyurethane.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingelectrophoreticlacquerpolyurethane/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
