--- a/products/platingcoating/nickelplating/index.html
+++ b/products/platingcoating/nickelplating/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาชุบนิกเกิล (Nickel Plating Solutions) | Baume Chemical</title>
   <meta name="description" content="โซลูชันชุบนิกเกิลสำหรับงานอุตสาหกรรม: Bright / Black / Satin / Electroless (EN) รวมถึง Chromium และ Hard Chrome ครอบคลุมทั้งถังแขวน-ถังกลิ้ง เน้นความเงา ความทนการสึก และการกระจายผิว พร้อมทีมเทคนิคดูหน้างาน.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="Nickelplating.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -18,7 +18,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="น้ำยาชุบนิกเกิล (Nickel Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Bright / Black / Satin / EN / Chromium / Hard Chrome สำหรับ Rack/Barrel เงาสูง กระจายผิวเยี่ยม ทนทาน.">
-  <meta property="og:url" content="https://www.baumechemical.com/Nickelplating">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg">
   <meta property="og:image:alt" content="Nickel plating bath with bright finish">
   <meta name="twitter:card" content="summary_large_image">
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "name":"Nickel Plating Solutions",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/Nickelplating.",
+    "url":"https://www.baumechemical.com/products/platingcoating/nickelplating/",
     "description":"Bright Nickel, Black Nickel, Satin Nickel, Electroless Nickel (EN), plus Chromium and Hard Chrome options for rack and barrel lines."
   }
   </script>
@@ -52,8 +52,8 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products"},
-      {"@type":"ListItem","position":3,"name":"Nickel Plating Solutions","item":"https://www.baumechemical.com/Nickelplating"}
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+      {"@type":"ListItem","position":3,"name":"Nickel Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/nickelplating/"}
     ]
   }
   </script>
@@ -181,7 +181,7 @@
             <div class="badges"><span class="badge">Bright Nickel</span><span class="badge">Rack / Barrel</span></div>
             <h3 data-i18n-key="bright_title">Bright Nickel Plating</h3>
             <p data-i18n-key="bright_desc">ยาเงานิกเกิลเงาลึก กระจายผิวดีแม้มุมอับ ให้เงาสูงทั้งช่วงกระแสกลาง–ต่ำ ใช้ได้กับโลหะหลายชนิด เหมาะทั้งถังแขวนและถังกลิ้ง</p>
-            <a class="more" href="Nickelplating.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingnickel/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -194,7 +194,7 @@
             <div class="badges"><span class="badge">Black Nickel</span><span class="badge">Decorative</span></div>
             <h3 data-i18n-key="black_title">Black Nickel Plating</h3>
             <p data-i18n-key="black_desc">ผิวดำเงาสม่ำเสมอ เหมาะกับชิ้นงานกล้อง กรอบแว่น อิเล็กทรอนิกส์ และจิวเวลรี่ มักชุบบนทองเหลืองหรือชั้นนิกเกิลเงา แล้วเคลือบแล็กเกอร์เพิ่มความทน</p>
-            <a class="more" href="troubleshootingblacknickel.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingblacknickel/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -207,7 +207,7 @@
             <div class="badges"><span class="badge">Satin Nickel</span><span class="badge">Matte Finish</span></div>
             <h3 data-i18n-key="satin_title">Satin Nickel Plating</h3>
             <p data-i18n-key="satin_desc">ผิวด้านเนียนสม่ำเสมอ เหมาะทำพื้นก่อนชุบโครเมียม ประกอบด้วย Satin Carrier A/B และตัวคุมโฟม ปรับโทนด้าน–เวลาแช่ได้ ใช้กับระบบถังแขวน</p>
-            <a class="more" href="troubleshootingnickelsatin.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingnickelsatin/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -220,7 +220,7 @@
             <div class="badges"><span class="badge">EN (High‑P)</span><span class="badge">Rack / Barrel</span></div>
             <h3 data-i18n-key="en_title">Electroless Nickel Plating</h3>
             <p data-i18n-key="en_desc">สารละลาย EN เสถียร คุมง่าย ไม่ใช้ไฟฟ้า เคลือบได้ทั้งโลหะ/อโลหะ ผิวเรียบเงา ฟอสฟอรัสสูง (&gt;7 wt%) แข็งและทนกัดกร่อน อัตราสะสมใหม่ราว 13–20 µm/ชม.</p>
-            <a class="more" href="troubleshootingennickel.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingennickel/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -233,7 +233,7 @@
             <div class="badges"><span class="badge">Chromium</span><span class="badge">Over Nickel</span></div>
             <h3 data-i18n-key="chrome_title">Chromium Plating</h3>
             <p data-i18n-key="chrome_desc">โครเมียมตกแต่งชั้นบางบนนิกเกิลเงา เพิ่มความเงาวาวสีขาวและทนสึก เหมาะระบบถังแขวน</p>
-            <a class="more" href="troubleshootinghardchrome.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootinghardchrome/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -246,7 +246,7 @@
             <div class="badges"><span class="badge">Hard Chrome</span><span class="badge">Wear Resistance</span></div>
             <h3 data-i18n-key="hchrome_title">Hard Chrome Plating</h3>
             <p data-i18n-key="hchrome_desc">โครเมียมแข็งเพื่อความทนสึก ทนขีดข่วน เหมาะชิ้นส่วนเครื่องจักร โรลเลอร์ แท่งกระบอกไฮดรอลิก ใช้ระบบถังแขวน ปรับความหนาได้ตั้งแต่นาทีจนถึงหลายชั่วโมง</p>
-            <a class="more" href="troubleshootinghardchrome.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootinghardchrome/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
