upload all files

--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -210,7 +210,7 @@
   <section class="hero" aria-label="Blackening hero">
     <div class="hero-inner wrap">
       <div style="margin-bottom:12px">
-        <a class="home-back" href="/">← <span data-i18n-key="back_home">หน้าแรก</span></a>
+        <a class="home-back" href="https://www.baumechemical.com/index.html">← <span data-i18n-key="back_home">หน้าแรก</span></a>
       </div>
       <h1 data-i18n-key="hero_title">น้ำยารมดำโลหะ (Blackening)</h1>
       <p data-i18n-key="hero_tagline">สร้างชั้นออกไซด์สีดำบนผิวโลหะเพื่อความสวยงาม ลดแสงสะท้อน และช่วยป้องกันการกัดกร่อน ขั้นตอนแบบจุ่มเย็น คุมง่าย สีสม่ำเสมอ เหมาะกับงานอุตสาหกรรมและงานตกแต่ง</p>
