--- a/products/passivation/index.html
+++ b/products/passivation/index.html
@@ -205,7 +205,7 @@
       <p data-i18n-key="hero_tagline">เพิ่มความทนการกัดกร่อน การยึดเกาะสี ลด White Rust และเพิ่มความสวยงาม — มีทั้ง Cr3/Cr6: ฟ้า/ขาว, ดำ, รุ้ง, เหลือง และ Olive Drab ให้เลือกตามสเปกงาน</p>
       <div class="actions">
         <!-- Back to Home button -->
-        <a class="btn ghost" href="/" data-i18n-key="btn_home">← กลับหน้าแรก</a>
+        <a class="btn ghost" href="https://www.baumechemical.com/index.html" data-i18n-key="btn_home">← กลับหน้าแรก</a>
         <a class="btn" href="/contact-us.html" data-i18n-key="btn_consult">ปรึกษาทีมเทคนิค</a>
       </div>
     </div>
