--- a/products/platingcoating/brassplating/index.html
+++ b/products/platingcoating/brassplating/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาชุบเหลืองแดง (Brass Plating Solutions) | Baume Chemical</title>
   <meta name="description" content="โซลูชันชุบเหลือง (Brass): Dark Yellow / Greenish Yellow / Imitation Gold (Cyanide‑Free) สำหรับงาน Rack/Barrel เน้นโทนสีทอง ความเงา การยึดเกาะ และการทนกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="brassplating.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -18,7 +18,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="Brass Plating Solutions | Baume Chemical">
   <meta property="og:description" content="Dark Yellow / Greenish Yellow / Cyanide‑Free Imitation Gold for rack and barrel—gold‑like appearance with good adhesion and corrosion resistance.">
-  <meta property="og:url" content="https://www.baumechemical.com/brassplating">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/">
   <meta property="og:image" content="https://i.imgur.com/ikv1kfr.jpeg">
   <meta property="og:image:alt" content="Brass plating bath with rich golden finish">
   <meta name="twitter:card" content="summary_large_image">
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "name":"Brass Plating Solutions",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/brassplating",
+    "url":"https://www.baumechemical.com/products/platingcoating/brassplating/",
     "description":"Dark Yellow Brass, Greenish Yellow Brass, and Cyanide‑free Imitation Gold systems for rack and barrel plating."
   }
   </script>
@@ -52,8 +52,8 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products"},
-      {"@type":"ListItem","position":3,"name":"Brass Plating Solutions","item":"https://www.baumechemical.com/brassplating"}
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+      {"@type":"ListItem","position":3,"name":"Brass Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/brassplating/"}
     ]
   }
   </script>
@@ -178,7 +178,7 @@
             <div class="badges"><span class="badge">Brass</span><span class="badge">Dark Yellow</span></div>
             <h3 data-i18n-key="dy_title">Dark Yellow Brass Salt</h3>
             <p data-i18n-key="dy_desc">เหมาะทั้งถังกลิ้ง/ถังแขวน ทำงานได้ทั้งอุ่น/เย็น (แนะนำอุ่น) ให้โทนเหลืองทองจัดจ้าน ไล่เฉดเหลืองอ่อนไปถึงเหลืองอมแดง ปรับสีผ่านอุณหภูมิและกระแส ผิวเงาใกล้เคียงทอง 20–24K</p>
-            <a class="more" href="troubleshootingbrass.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingbrass/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -191,7 +191,7 @@
             <div class="badges"><span class="badge">Brass</span><span class="badge">Yellow‑Green</span></div>
             <h3 data-i18n-key="gy_title">Greenish Yellow Brass Salt</h3>
             <p data-i18n-key="gy_desc">เหมาะทั้งถังกลิ้ง/ถังแขวน ทำงานได้ทั้งอุ่น/เย็น (แนะนำอุ่น) ให้โทนเหลืองอมเขียว ไล่เฉดได้ด้วยอุณหภูมิและกระแส ให้ผิวสวยโดดเด่น แตกต่าง</p>
-            <a class="more" href="troubleshootingbrass.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingbrass/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -204,7 +204,7 @@
             <div class="badges"><span class="badge">Imitation Gold</span><span class="badge">Cyanide‑Free</span></div>
             <h3 data-i18n-key="ig_title">Cyanide‑Free Imitation Gold</h3>
             <p data-i18n-key="ig_desc">ระบบปลอดไซยาไนด์ ลดความเสี่ยงด้านความปลอดภัยและสิ่งแวดล้อม ให้ผิวสวยทนทาน เหมาะกับงานที่ต้องการคุณภาพสูงและข้อกำกับด้านสิ่งแวดล้อม</p>
-            <a class="more" href="troubleshootingbrassnoncyanide.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingbrassnoncyanide/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
