--- a/products/platingcoating/copperplating/index.html
+++ b/products/platingcoating/copperplating/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาชุบทองแดง (Copper Plating Solutions) | Baume Chemical</title>
   <meta name="description" content="โซลูชันชุบทองแดงสำหรับงานอุตสาหกรรม: Alkaline Cyanide / Alkaline Non‑Cyanide / Acid Copper ครอบคลุมงานถังแขวน–ถังกลิ้ง เน้นการยึดเกาะ การนำไฟฟ้า ความเงา และการกระจายผิว พร้อมทีมเทคนิคดูหน้างาน.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="copperplating.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -18,7 +18,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="น้ำยาชุบทองแดง (Copper Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Alkaline Cyanide / Alkaline Non‑Cyanide / Acid Copper สำหรับ Rack/Barrel เพื่อการยึดเกาะ การนำไฟฟ้า และผิวเงาสม่ำเสมอ.">
-  <meta property="og:url" content="https://www.baumechemical.com/copperplating">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/copperplating/">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg">
   <meta property="og:image:alt" content="Copper plating bath with bright copper surface">
   <meta name="twitter:card" content="summary_large_image">
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "name":"Copper Plating Solutions",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/copperplating",
+    "url":"https://www.baumechemical.com/products/platingcoating/copperplating/",
     "description":"Alkaline Cyanide, Alkaline Non‑Cyanide, and Acid Copper plating systems for rack and barrel lines."
   }
   </script>
@@ -52,8 +52,8 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products"},
-      {"@type":"ListItem","position":3,"name":"Copper Plating Solutions","item":"https://www.baumechemical.com/copperplating"}
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+      {"@type":"ListItem","position":3,"name":"Copper Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/copperplating/"}
     ]
   }
   </script>
@@ -178,7 +178,7 @@
             <div class="badges"><span class="badge">Alkaline Cyanide</span><span class="badge">Adhesion Undercoat</span></div>
             <h3 data-i18n-key="cya_title">Alkaline Cyanide Copper</h3>
             <p data-i18n-key="cya_desc">เพิ่มการยึดเกาะของทองแดงบนเหล็ก ทองเหลือง เหล็กผสมตะกั่ว และซิงค์ไดคาสต์ เหมาะเป็นชั้นรองพื้นก่อนชุบนิเกิ้ล/โครเมียม เคลือบสม่ำเสมอ คุมง่าย ทนกัดกร่อนดี</p>
-            <a class="more" href="troubleshootingcoppercyanide.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingcoppercyanide/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -191,7 +191,7 @@
             <div class="badges"><span class="badge">Alkaline Non‑Cyanide</span><span class="badge">Safer / Eco</span></div>
             <h3 data-i18n-key="ncn_title">Alkaline Non‑Cyanide Copper</h3>
             <p data-i18n-key="ncn_desc">เลี่ยงไซยาไนด์แต่คงข้อดีของระบบด่าง ให้ผิวเรียบเงา การกระจายตัวดี ลดความเสี่ยงและขั้นตอนบำบัดของเสีย เหมาะกับชิ้นงานหลากหลาย</p>
-            <a class="more" href="troubleshootingcoppernon-cyanide.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingcoppernon-cyanide/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -204,7 +204,7 @@
             <div class="badges"><span class="badge">Acid Copper</span><span class="badge">High Brightness</span></div>
             <h3 data-i18n-key="acid_title">Acid Copper Plating</h3>
             <p data-i18n-key="acid_desc">ใช้กับกรดกำมะถัน ให้ความเงาสูง ประสิทธิภาพชุบดี ครอบคลุมมุมลึก เคลือบหนาได้ง่าย ผิวเรียบไร้รูพรุน ยืดหยุ่น ทนกัดกร่อน คุมบ่อและเติมสารง่าย</p>
-            <a class="more" href="troubleshootingacidcopper.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingacidcopper/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
