--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -194,7 +194,7 @@
   <section class="hero" aria-label="Plating & Coating hero">
     <div class="hero-inner wrap">
       <div style="margin-bottom:12px">
-        <a class="home-back" href="/">← <span data-i18n-key="back_home">หน้าแรก</span></a>
+        <a class="home-back" href="https://www.baumechemical.com/index.html">← <span data-i18n-key="back_home">หน้าแรก</span></a>
       </div>
       <h1 data-i18n-key="hero_title">น้ำยาชุบและเคลือบผิวโลหะ (Plating & Coating)</h1>
       <p data-i18n-key="hero_tagline">กระบวนการชุบและเคลือบช่วยเพิ่มความทนการกัดกร่อน ความแข็ง ความเงางาม และสมบัติเชิงฟังก์ชันของชิ้นงาน เราพัฒนาสูตรสำหรับซิงค์ นิกเกิล ทองแดง ทองเหลือง แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ พร้อมทีมเทคนิคดูแลไลน์ผลิตของคุณ</p>
