--- a/products/equipment/index.html
+++ b/products/equipment/index.html
@@ -221,7 +221,7 @@
   <!-- === Hero === -->
   <header class="hero">
     <div class="wrap">
-      <a class="back-home" href="/" onclick="if(history.length>1){history.back();return false;}" data-i18n-key="back_home">← กลับหน้าแรก</a>
+      <a class="back-home" href="https://www.baumechemical.com/index.html" onclick="if(history.length>1){history.back();return false;}" data-i18n-key="back_home">← กลับหน้าแรก</a>
       <h1 data-i18n-key="hero_title">วัสดุอุปกรณ์</h1>
       <p data-i18n-key="hero_tagline">เครื่องมือและอุปกรณ์สำหรับงานชุบโลหะและห้องปฏิบัติการ</p>
     </div>
