--- a/products/polishing/index.html
+++ b/products/polishing/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) | Baume Chemical</title>
 
-  <!-- === SEO === -->
+  <!-- SEO -->
   <meta name="description" content="สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว — เงากระจก ลดคราบ ออกแบบกระบวนการให้เหมาะกับไลน์ผลิต">
-  <meta name="robots" content="index,follow">
+  <meta name="robots" content="index, follow, max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/polishing/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
-  <meta property="og:locale" content="th_TH">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) - Baume Chemical">
@@ -21,7 +21,12 @@
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
-  <!-- Structured Data (JSON-LD) -->
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <!-- JSON-LD: Organization -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -32,6 +37,16 @@
     "sameAs":["https://line.me/ti/p/~baumechemical"]
   }
   </script>
+  <!-- JSON-LD: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/"
+  }
+  </script>
+  <!-- JSON-LD: CollectionPage -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -42,16 +57,18 @@
     "description":"สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว"
   }
   </script>
+  <!-- JSON-LD: Breadcrumbs -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Polishing","item":"https://www.baumechemical.com/polishing"}
+      {"@type":"ListItem","position":2,"name":"Polishing","item":"https://www.baumechemical.com/products/polishing/index.html"}
     ]
   }
   </script>
+  <!-- JSON-LD: ItemList (sub pages) -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -66,11 +83,6 @@
   }
   </script>
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-
   <style>
     :root{
       --brand:#2c5e4e;
@@ -83,25 +95,67 @@
       --shadow-1:0 8px 26px rgba(2,8,20,.06);
       --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
+      --header-h:64px;
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
     body{font-family:'Noto Sans Thai', system-ui, sans-serif; color:var(--ink); background:var(--bg); line-height:1.6}
 
-    /* === Language Switcher === */
-    .lang-fab{
-      position:fixed; top:14px; right:14px; z-index:1100; display:flex; gap:6px;
-      padding:4px; border:1px solid #e2e8f0; border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px);
-      box-shadow:0 10px 26px rgba(2,8,20,.12);
+    /* ===== Overlay Top Nav (เหมือนหน้า Home) ===== */
+    .site-header{
+      position:absolute; top:0; left:0; right:0; z-index:1400;
+      background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,0));
+      border-bottom:1px solid rgba(255,255,255,.14);
     }
-    .lang-fab .lang-btn{
-      appearance:none; border:0; background:transparent; cursor:pointer; padding:6px 10px; border-radius:999px;
-      font-weight:800; display:flex; align-items:center; gap:6px; color:#0f172a;
+    .site-header .header-inner{
+      max-width:1200px; margin:0 auto;
+      display:flex; align-items:center; justify-content:space-between;
+      min-height:var(--header-h); padding:10px 16px;
     }
-    .lang-fab .lang-btn[aria-pressed="true"]{ background: var(--brand-2); color:#fff }
-    .lang-fab .flag{ width:20px; height:15px; border-radius:2px; object-fit:cover; box-shadow:0 0 0 1px rgba(0,0,0,.08) }
+    .brand{display:flex; align-items:center; gap:10px; text-decoration:none}
+    .brand-logo{
+      width:42px;height:42px;border-radius:10px;flex:0 0 42px;
+      background:#e8f1ec var(--logo-url) center/cover no-repeat;
+      box-shadow:0 2px 8px rgba(2,8,20,.15)
+    }
+    .brand-name{font-weight:800; color:#fff; font-size:1.02rem; letter-spacing:.2px}
 
-    /* === Hero === */
+    .primary-nav{display:flex; align-items:center; gap:12px}
+    .menu{list-style:none; display:flex; gap:8px; margin:0; padding:0}
+    .menu a{
+      display:inline-block; padding:10px 12px; border-radius:10px;
+      color:#fff; text-decoration:none; font-weight:600;
+    }
+    .menu a:hover{ background:rgba(255,255,255,.12); color:#fff }
+    .menu a[aria-current="page"]{ background:rgba(255,255,255,.18); color:#fff; box-shadow:none }
+    .menu a.cta{ border:1px solid rgba(255,255,255,.35) }
+    .menu a.cta:hover{ background:#fff; color:#0f172a; border-color:#fff }
+
+    .nav-toggle{
+      appearance:none; border:0; background:transparent; cursor:pointer;
+      width:38px; height:38px; border-radius:9px; display:none; align-items:center; justify-content:center;
+    }
+    .nav-toggle:focus-visible{ outline:2px solid #ffffff; outline-offset:2px }
+    .nav-toggle .bar{ position:relative; width:22px; height:2px; background:#fff; border-radius:2px }
+    .nav-toggle .bar::before,.nav-toggle .bar::after{
+      content:""; position:absolute; left:0; right:0; height:2px; background:#fff; border-radius:2px
+    }
+    .nav-toggle .bar::before{ top:-7px } .nav-toggle .bar::after{ top:7px }
+
+    @media (max-width: 920px){
+      .menu{
+        position:fixed; left:12px; right:12px; top:calc(var(--header-h) + 8px);
+        background:#0f172acc; backdrop-filter: blur(8px);
+        border:1px solid rgba(255,255,255,.18); border-radius:14px;
+        transform:translateY(-12px); opacity:0; pointer-events:none;
+        display:grid; gap:6px; padding:12px; transition:transform .2s ease, opacity .2s ease;
+      }
+      .menu li a{ display:block; padding:12px 14px; border-radius:10px }
+      .site-header.open .menu{ transform:none; opacity:1; pointer-events:auto }
+      .nav-toggle{ display:inline-flex }
+    }
+
+    /* ===== Hero ===== */
     .hero{
       position:relative; overflow:hidden; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(420px, 60vh, 620px);
@@ -109,13 +163,21 @@
     }
     .hero h1{margin:0 0 10px; font-weight:800; font-size:clamp(26px,4.2vw,44px); text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:960px; margin:0 auto; color:#e6f2ef}
+    .back-home{
+      display:inline-flex; align-items:center; gap:8px;
+      margin-bottom:10px;
+      padding:6px 12px; border-radius:999px;
+      background:#ffffffcc; color:#0f172a; border:1px solid #e2e8f0;
+      text-decoration:none; font-weight:800; backdrop-filter: blur(6px);
+    }
+    .back-home:hover{ background:#fff }
 
-    /* === Layout === */
+    /* ===== Layout ===== */
     .wrap{max-width:1200px; margin:auto; padding:34px 16px}
     h2.section{margin:0 0 8px; font-size:clamp(22px,2.6vw,30px); font-weight:800; color:#1f2a24}
     p.lead{margin:0 0 16px; color:#5f6d7c}
 
-    /* === Cards grid with lift === */
+    /* ===== Cards ===== */
     .grid{display:grid; gap:16px; grid-template-columns:repeat(3,1fr)}
     @media(max-width:980px){ .grid{grid-template-columns:repeat(2,1fr)} }
     @media(max-width:640px){ .grid{grid-template-columns:1fr} }
@@ -128,15 +190,13 @@
     .card p{margin:0; color:#5b6675; font-size:.96rem}
     .card .more{display:inline-block; margin-top:10px; color:var(--accent); font-weight:800; text-decoration:none}
     .card .more:hover{ text-decoration:underline }
-
-    /* Lift (opt-in) */
     .card.lift{ will-change: transform, box-shadow }
     @media (hover:hover) and (pointer:fine){
       .card.lift:hover, .card.lift:focus-within{ transform:translateY(-8px); box-shadow:var(--shadow-2) }
     }
     @media (prefers-reduced-motion: reduce){ .card.lift{ transition:none } }
 
-    /* === Footer (match homepage) === */
+    /* ===== Footer ===== */
     .site-footer{background:#0f172a; color:#cbd5e1; margin-top:24px}
     .site-footer a{color:#e2e8f0; text-decoration:none}
     .site-footer a:hover{color:#fff; text-decoration:underline}
@@ -146,19 +206,55 @@
     .footer-brand .ft-head{display:flex; align-items:center; gap:12px; margin:0 0 10px}
     .ft-logo{width:44px; height:44px; border-radius:10px; background:var(--brand); background-image:var(--logo-url); background-size:cover; background-position:center; box-shadow:0 3px 10px rgba(0,0,0,.3)}
     .ft-name{font-weight:800; color:#fff}
-    .ft-desc{margin:6px 0 0; color:#93a4b8; font-size:.96rem}
     .footer-title{margin:0 0 8px; color:#fff; font-weight:800; font-size:1.02rem}
     .footer-list{list-style:none; margin:8px 0 0; padding:0}
     .footer-list li{margin:6px 0}
     .footer-bottom{border-top:1px solid rgba(148,163,184,.25); margin-top:22px; padding-top:16px; display:flex; gap:10px; align-items:center; justify-content:space-between; flex-wrap:wrap; font-size:.92rem; color:#9fb1c6}
 
-    /* === Utilities === */
+    /* ===== Utilities ===== */
     .reveal{opacity:0; transform: translateY(14px); transition: opacity .5s ease, transform .5s ease}
     .reveal.show{opacity:1; transform:none}
+
+    /* ===== Floating Language Switcher (เลื่อนลงต่ำกว่าหัวเว็บ overlay) ===== */
+    .lang-fab{
+      position:fixed; top:calc(var(--header-h) + 10px); right:14px; z-index:1100; display:flex; gap:6px;
+      padding:4px; border:1px solid #e2e8f0; border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px);
+      box-shadow:0 10px 26px rgba(2,8,20,.12);
+    }
+    .lang-fab .lang-btn{
+      appearance:none; border:0; background:transparent; cursor:pointer; padding:6px 10px; border-radius:999px;
+      font-weight:800; display:flex; align-items:center; gap:6px; color:#0f172a;
+    }
+    .lang-fab .lang-btn[aria-pressed="true"]{ background: var(--brand-2); color:#fff }
+    .lang-fab .flag{ width:20px; height:15px; border-radius:2px; object-fit:cover; box-shadow:0 0 0 1px rgba(0,0,0,.08) }
   </style>
 </head>
 <body>
-  <!-- === Language Switcher === -->
+
+  <!-- === Site Header (Overlay Nav เหมือนหน้า Home) === -->
+  <header class="site-header" role="banner">
+    <div class="header-inner">
+      <a class="brand" href="/" aria-label="Baume Chemical">
+        <span class="brand-logo" aria-hidden="true"></span>
+        <span class="brand-name">Baume Chemical</span>
+      </a>
+
+      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+        <span class="bar" aria-hidden="true"></span>
+      </button>
+
+      <nav class="primary-nav" aria-label="Primary">
+        <ul class="menu">
+          <li><a href="/" class="nav-link">Home</a></li>
+          <li><a href="/about-us.html" class="nav-link">About us</a></li>
+          <li><a href="/products.html" class="nav-link" aria-current="page">Products</a></li>
+          <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- === Floating Language Switcher (TH/EN) === -->
   <div class="lang-fab" role="group" aria-label="Language switcher">
     <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
       <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH">
@@ -173,6 +269,7 @@
   <!-- === Hero === -->
   <header class="hero">
     <div class="wrap" style="padding:22px 16px">
+      <a class="back-home" href="/" data-i18n-key="back_home" aria-label="Back to home">← กลับหน้าแรก</a>
       <h1 data-i18n-key="hero_title">น้ำยากัดเงา/ขัดเงาโลหะ (Polishing)</h1>
       <p data-i18n-key="hero_tagline">
         ปรับผิวโลหะให้เงางามเรียบเนียน ลดคราบ/ลดคม และเพิ่มความทนการกัดกร่อน
@@ -244,11 +341,10 @@
     </div>
   </main>
 
-  <!-- === Footer (เหมือนหน้าหลัก) === -->
+  <!-- === Footer === -->
   <footer class="site-footer">
     <div class="footer-inner">
       <div class="footer-grid">
-        <!-- แบรนด์ + ที่อยู่/เวลา/โทร -->
         <section class="footer-brand">
           <div class="ft-head">
             <div class="ft-logo" aria-hidden="true"></div>
@@ -262,7 +358,6 @@
           </ul>
         </section>
 
-        <!-- หมวดผลิตภัณฑ์ -->
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
@@ -278,7 +373,6 @@
           </ul>
         </nav>
 
-        <!-- ช่องทางติดต่อ -->
         <section aria-label="ติดต่อเรา">
           <h3 class="footer-title" data-i18n-key="footer_contact">ติดต่อเรา</h3>
           <ul class="footer-list">
@@ -290,13 +384,24 @@
       </div>
 
       <div class="footer-bottom">
-        <div data-i18n-key="footer_copy">© 2025 Baume Chemical. All rights reserved.</div>
+        <div>© 2025 Baume Chemical. All rights reserved.</div>
       </div>
     </div>
   </footer>
 
-  <!-- === JS: reveal + i18n === -->
+  <!-- === JS: menu toggle + reveal + i18n === -->
   <script>
+    // Mobile nav toggle (เหมือนหน้า Home)
+    (function(){
+      var header = document.querySelector('.site-header');
+      var toggle = document.querySelector('.site-header .nav-toggle');
+      if(!header || !toggle) return;
+      toggle.addEventListener('click', function(){
+        var opened = header.classList.toggle('open');
+        toggle.setAttribute('aria-expanded', String(opened));
+      });
+    })();
+
     // Reveal on scroll
     const revealEls = document.querySelectorAll('.reveal');
     const revObs = new IntersectionObserver((entries,obs)=>{
@@ -307,6 +412,7 @@
     /* i18n dictionary */
     const I18N = {
       th: {
+        back_home: "← กลับหน้าแรก",
         hero_title: "น้ำยากัดเงา/ขัดเงาโลหะ (Polishing)",
         hero_tagline: "ปรับผิวโลหะให้เงางามเรียบเนียน ลดคราบ/ลดคม และเพิ่มความทนการกัดกร่อน รองรับงานสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว — พร้อมคำแนะนำจากทีมเทคนิค",
         sec_products: "ผลิตภัณฑ์",
@@ -323,10 +429,10 @@
         zn_desc: "ล้างคราบตะกั่ว/ออกไซด์ คืนความเงาสดใส ลดความขรุขระของผิว และเพิ่มความทนต่อการกัดกร่อนของชิ้นงาน.",
         view_details: "ดูรายละเอียด →",
         footer_products: "หมวดผลิตภัณฑ์",
-        footer_contact: "ติดต่อเรา",
-        footer_copy: "© 2025 Baume Chemical. All rights reserved."
+        footer_contact: "ติดต่อเรา"
       },
       en: {
+        back_home: "← Back to Home",
         hero_title: "Metal Polishing & Brightening",
         hero_tagline: "Smooth, mirror-like finishes with improved corrosion resistance—for stainless steel, brass, aluminum, steel, zinc, and lead. Expert guidance tailored to your line.",
         sec_products: "Products",
@@ -343,8 +449,7 @@
         zn_desc: "Removes lead deposits/oxides, restores brightness, smooths the surface, and boosts corrosion resistance.",
         view_details: "View Details →",
         footer_products: "Products",
-        footer_contact: "Contact Us",
-        footer_copy: "© 2025 Baume Chemical. All rights reserved."
+        footer_contact: "Contact Us"
       }
     };
 
@@ -354,13 +459,14 @@
     };
 
     function applyLang(lang){
-      document.documentElement.lang = lang === 'en' ? 'en' : 'th';
-      els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === lang)));
+      const sel = (lang === 'en') ? 'en' : 'th';
+      document.documentElement.lang = sel;
+      els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === sel)));
       els.translatables().forEach(node => {
         const key = node.getAttribute('data-i18n-key');
-        if (key && I18N[lang] && I18N[lang][key]) node.textContent = I18N[lang][key];
+        if (key && I18N[sel] && I18N[sel][key]) node.textContent = I18N[sel][key];
       });
-      try{ localStorage.setItem('lang', lang); }catch(e){}
+      try{ localStorage.setItem('lang', sel); }catch(e){}
     }
 
     (function initLang(){
